--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ala-map-plugin",
-  "version": "0.0.1",
+  "version": "3.1-SNAPSHOT",
   "description": "Karma / jasmine configuration for testing project javascript",
   "main": "test/unit/js",
   "directories": {
@@ -9,30 +9,29 @@
   "dependencies": {},
   "devDependencies": {
     "@metahub/karma-jasmine-jquery": "^2.0.1",
-    "chromedriver": "^79.0.0",
+    "chromedriver": "^103.0.0",
     "font-awesome": "4.7.0",
-    "handlebars": "^4.7.2",
+    "handlebars": "^4.7.7",
     "jasmine-core": "^3.5.0",
     "jasmine-jquery": "^2.0.0",
     "jquery": "^3.4.1",
     "jquery-inview": "1.1.2",
-    "karma": "^4.4.1",
+    "karma": "^6.4.0",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage": "^2.0.1",
-    "karma-firefox-launcher": "^1.2.0",
+    "karma-coverage": "^2.0.3",
+    "karma-firefox-launcher": "^1.3.0",
     "karma-jasmine": "^1.1.2",
     "karma-jquery": "^0.2.4",
-    "karma-remote-reporter": "^0.2.0",
-    "leaflet": "0.7.7",
+    "leaflet": "1.7.1",
     "leaflet-control-geocoder": "1.5.5",
-    "leaflet-draw": "0.4.12",
-    "leaflet-easybutton": "1.2.0",
+    "leaflet-draw": "1.0.4",
+    "leaflet-easybutton": "1.3.2",
     "leaflet-loading": "0.1.24",
-    "leaflet-sleep": "0.5.1",
+    "leaflet-sleep": "0.5.2",
     "leaflet.coordinates": "0.1.5",
-    "leaflet.markercluster": "0.5.0",
-    "underscore": "1.8.3",
-    "urijs": "1.18.10"
+    "leaflet.markercluster": "1.5.3",
+    "underscore": "1.13.4",
+    "urijs": "1.19.11"
   },
   "scripts": {
     "test": "karma start karma.conf.js",
