--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
     }
 }
 
-version "4.0"
+version "4.0.1-SNAPSHOT"
 group "org.grails.plugins"
 
 apply plugin:"eclipse"
@@ -50,8 +50,8 @@ dependencies {
     compile 'org.webjars:jquery:3.6.0'
     compile 'org.webjars.bowergithub.protonet:jquery.inview:1.1.2'
     compile 'org.webjars.npm:handlebars:4.7.7'
-    compile 'org.webjars.npm:leaflet:1.7.1'
-    compile 'org.webjars.npm:leaflet-draw:1.0.2'
+    compile 'org.webjars.npm:leaflet:1.6.0'
+    compile 'org.webjars.npm:github-com-kbartas-Leaflet-draw:1.0.4'
     compile('org.webjars.bower:Leaflet.Coordinates:0.1.5') { // TODO get this NPM package into a webjar
         exclude group: 'org.webjars.bower', module: 'leaflet-dist' // exclude leaflet from bower as we have it from npm
     }
